--- a/cehat/App.Config
+++ b/cehat/App.Config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+	</startup>
   <connectionStrings>
-    <add name="DataModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\DatabaseLibrary\CeHatDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="CeHatDBEntities" connectionString="metadata=res://*/DatabaseLibrary.DatabaseDiagram.csdl|res://*/DatabaseLibrary.DatabaseDiagram.ssdl|res://*/DatabaseLibrary.DatabaseDiagram.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\CeHatDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  <add name="DataModel" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\LENOVO\source\repos\CeHat\cehat\CeHatDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" 
+	   providerName="System.Data.SqlClient" />
   </connectionStrings>
+	
 </configuration>
