--- a/cehat/cehat.csproj
+++ b/cehat/cehat.csproj
@@ -122,6 +122,12 @@
     <Compile Include="FormDiagnosis.Designer.cs">
       <DependentUpon>FormDiagnosis.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormDiagnosis2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDiagnosis2.Designer.cs">
+      <DependentUpon>FormDiagnosis2.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormHasilDiagnosis.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +209,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDiagnosis.resx">
       <DependentUpon>FormDiagnosis.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDiagnosis2.resx">
+      <DependentUpon>FormDiagnosis2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormHasilDiagnosis.resx">
       <DependentUpon>FormHasilDiagnosis.cs</DependentUpon>
