ubah pengaturan database biar bisa langsung update lewat program

--- a/cehat/cehat.csproj
+++ b/cehat/cehat.csproj
@@ -266,17 +266,15 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="DBCehat.mdf">
+    <Content Include="bin\Debug\DBCehat.mdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="DBCehat_log.ldf">
+    <Content Include="bin\Debug\DBCehat_log.ldf">
       <DependentUpon>DBCehat.mdf</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="bin\Debug\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
