--- a/cehat/cehat.csproj
+++ b/cehat/cehat.csproj
@@ -172,6 +172,12 @@
     <Compile Include="FormRating.Designer.cs">
       <DependentUpon>FormRating.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTentangAplikasi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTentangAplikasi.Designer.cs">
+      <DependentUpon>FormTentangAplikasi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gejala.cs" />
     <Compile Include="HasilDiagnosis.cs" />
     <Compile Include="Akses.cs" />
@@ -229,6 +235,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormRating.resx">
       <DependentUpon>FormRating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTentangAplikasi.resx">
+      <DependentUpon>FormTentangAplikasi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
