--- a/cehat/cehat.csproj
+++ b/cehat/cehat.csproj
@@ -178,7 +178,7 @@
     <Compile Include="Informasi.cs" />
     <Compile Include="Obat.cs" />
     <Compile Include="Penyakit.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="IPerson.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rating.cs" />
